--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Home/index.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Home/index.cshtml
@@ -42,7 +42,8 @@
         <li><a href="explorers.htm" title="Our community">Explorers <br /><span class="tagline">join our community</span></a>
           <ul>
             <li><a href="explorers/join.htm" title="join our community">Join the Explorers</a></li>
-            <li><a href="/blog" title="read our blog!">Read our Blog</a></li>
+
+            <li><a herf="@Url.Action("Index","Blog")"title="read our blog!">read our blog!" })/</li>
             <li><a href="explorers/gallery.htm" title="contributor photos">Tour Photos</a></li>
             <li><a href="_video/EC_podcast_full version.mov" title="check out our podcast">Video podcast</a></li>
           </ul>
@@ -122,6 +123,9 @@
       <li><a href="support.htm" title="Need help?">Support</a></li>
       <li><a href="resources/legal.htm" title="The fine print">Legal</a></li><li><a href="login.htm">Login</a></li>
     </ul>
+      <p>
+          copyright Jess chawick @DateTime.Now.Year
+      </p>
   </section>
   <section id="companyInfo">
   <h1>Contact</h1>
