--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Layout.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Layout.cshtml
@@ -43,7 +43,7 @@
           <ul>
             <li><a href="explorers/join.htm" title="join our community">Join the Explorers</a></li>
 
-            <li><'a' herf="@Url.Action("Index","Blog")"title="read our blog!">read our blog!" })/</li>
+            <li><a herf="@Url.Action("Index","Blog")"title="read our blog!">read our blog!" })/</li>
             <li><a href="explorers/gallery.htm" title="contributor photos">Tour Photos</a></li>
             <li><a href="_video/EC_podcast_full version.mov" title="check out our podcast">Video podcast</a></li>
           </ul>
