--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Layout.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Layout.cshtml
@@ -43,7 +43,7 @@
           <ul>
             <li><a href="explorers/join.htm" title="join our community">Join the Explorers</a></li>
 
-            <li><a herf="@Url.Action("Index","Blog")"title="read our blog!">read our blog!" })/</li>
+            <li><a href="@Url.Action("Index", "Blog")" title="read our blog!">Read our Blog</a></li>
             <li><a href="explorers/gallery.htm" title="contributor photos">Tour Photos</a></li>
             <li><a href="_video/EC_podcast_full version.mov" title="check out our podcast">Video podcast</a></li>
           </ul>
@@ -62,17 +62,7 @@
   </section>
   <div id="contentWrapper">
   <section id="mainContent">
- <article id="mainArticle"> 
- <h1>Tour Spotlight</h1>
-  <p class="spotlight">This month's spotlight package is Cycle California. Whether you are looking for some serious downhill thrills to a relaxing ride along the coast, you'll find something to love in Cycle California.<br /> <span class="accent"><a href="/tours_cycle.htm" title="Cycle California">tour details</a></span></p>
-  <h1>Explorer's Podcast</h1>
-<video controls poster="/images/podcast_poster.jpg" width="512" height="288" preload="none">
-	<source src="_video/podcast_teaser.mp4" type="video/mp4" />
-	<source src="_video/podcast_teaser.webm" type="video/webm" />
-	<source src="_video/podcast_teaser.theora.ogv"type="video/ogg" />
-</video>
-  <p class="videoText">Join us each month as we publish a new Explore California video podcast, with featured tours, customer photos, and some exctiing new features!<span class="accent"><a href="explorers/video.htm" title="Video Podcast">Watch the full video</a></span></p>
-  </article>
+    @RenderBody()
   </section>
     <aside id="secondaryContent">
         <div id="specials" class="callOut">
