Rendring reuseable sections of content in a layout

--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Home/index.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Home/index.cshtml
@@ -1,7 +1,6 @@
-@{ 
+@{
     Layout = "_Layout";
 }
-
 
 
 <article id="mainArticle">
@@ -15,3 +14,8 @@
     </video>
     <p class="videoText">Join us each month as we publish a new Explore California video podcast, with featured tours, customer photos, and some exctiing new features!<span class="accent"><a href="explorers/video.htm" title="Video Podcast">Watch the full video</a></span></p>
 </article>
+
+@section header{
+    <h1>Explore our world your way</h1>
+    <a herf="/tours.htm" title="Find your tour!">Find your tour</a>
+}
