--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Post.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Post.cshtml
@@ -1,11 +1,12 @@
-﻿@{
+﻿@model ExploreCailfornia.Models.Post
+@{
     Layout = "_Layout";
 }
 <articale class="blog-post">
-    <h1>@ViewBag.Title</h1>
+    <h1>@Model.Title</h1>
     <div class="details">
-        Posted <span>@ViewBag.Posted</span> by <span>@ViewBag.Author</span>
+        Posted <span>@Model.Posted</span> by <span>@Model.Author</span>
     </div>
     <divclass="content">
-        @ViewBag.Body
+        @Model.Body
 </articale>
