--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Create.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Create.cshtml
@@ -1,27 +1,32 @@
-﻿@model ExploreCailfornia.Models.Post
+﻿
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@model ExploreCailfornia.Models.Post
 @{
     Layout = "_Layout";
 }
 <h1>Create Blog post</h1>
 <fieldset>
+    <form asp-action="Create" asp-controller="Blog">
 
-    @using (Html.BeginForm())
-     {
-        @Html.ValidationSummary()
+     
+     
+        <div asp-ValidationSummary= "ModelOnly="class=" "input-Validation-error"></div>
         <p>
-             @Html.LabelFor(x => x.Title)
-             @Html.EditorFor(x => x.Title)
-             @Html.ValidationMessageFor(x => x.Title)
+            <label asp-for="Title"></label>
+            <input asp-for="Title" class="form-control" placeholder="Blog post title"/>
+            <span asp-validation-for="Title"></span>
            
-        </p>
+            </p>
         <p>
-            @Html.LabelFor(x => x.Body)
-            @Html.EditorFor(x => x.Body)
-            @Html.ValidationMessageFor(x => x.Title)
+            <label asp-for="Body"></label>
+            <textarea asp-for="Body" class="form-control" placeholder="Blog post content"></textarea>
+            <span asp-validation-for="Body"></span>
+
         </p>
-        <p>
+        
             <button type="submit">create post</button>
         </p>
-    }
-
-</fieldset>
+        </form>
+    
+    
+}        </fieldset>
