--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Create.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelper"
 @model ExploreCailfornia.Models.Post
 @{
     Layout = "_Layout";
@@ -10,7 +10,7 @@
 
      
      
-        <div asp-ValidationSummary= "ModelOnly="class=" "input-Validation-error"></div>
+        <div asp-ValidationSummary= "ModeOnly ="class=" "input-Validation-error"></div>
         <p>
             <label asp-for="Title"></label>
             <input asp-for="Title" class="form-control" placeholder="Blog post title"/>
