--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Create.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Create.cshtml
@@ -1,32 +1,33 @@
-﻿
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelper"
+﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
 @model ExploreCailfornia.Models.Post
 @{
     Layout = "_Layout";
 }
-<h1>Create Blog post</h1>
+
+<h1>Create Blog Post</h1>
+
 <fieldset>
+
     <form asp-action="Create" asp-controller="Blog">
 
-     
-     
-        <div asp-ValidationSummary= "ModeOnly ="class=" "input-Validation-error"></div>
+        <div asp-validation-summary="ModelOnly" class="input-validation-error"></div>
+
         <p>
             <label asp-for="Title"></label>
-            <input asp-for="Title" class="form-control" placeholder="Blog post title"/>
+            <input asp-for="Title" class="form-control" placeholder="Blog post title" />
             <span asp-validation-for="Title"></span>
-           
-            </p>
+        </p>
+
         <p>
             <label asp-for="Body"></label>
             <textarea asp-for="Body" class="form-control" placeholder="Blog post content"></textarea>
             <span asp-validation-for="Body"></span>
+        </p>
 
+        <p>
+            <button type="submit">Create Post</button>
         </p>
-        
-            <button type="submit">create post</button>
-        </p>
-        </form>
-    
-    
-}        </fieldset>
+
+    </form>
+
+</fieldset>
