--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Index.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Index.cshtml
@@ -1,12 +1,29 @@
-﻿@{
+﻿@model IEnumerable<ExploreCailfornia.Models.Post>
+@{
     Layout = "_Layout";
 }
-<h1>
-    Explorer's Blog</h1>
+
+<h1>Explorer's Blog</h1>
 
 <p>
-    Below are afew ofthe latest posts from some of our explorers.
+    Below are a few of the latest posts from some of our explorers.
 </p>
-<div class=" belog-posts">
-    ToDo: Blog posts will go here
+
+<div class="blog-posts">
+    @foreach (var post in Model)
+    {
+        <article class="blog-post">
+            <h1>
+                @Html.ActionLink(post.Title, "Post", "Blog",
+                    new { year = post.Posted.Year, month = post.Posted.Month, key = post.Key }
+                )
+            </h1>
+            <div class="details">
+                Posted <span>@post.Posted</span> by <span>@post.Author</span>
+            </div>
+            <div class="content">
+                @post.Body
+            </div>
+        </article>
+    }
 </div>
