Reuse view logic with injectable services

--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Post.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Post.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExploreCailfornia.Models.Post
+﻿@inject ExploreCailfornia.Models.FormattingService Formate
+@model ExploreCailfornia.Models.Post
 
 <article class="blog-post">
     <h1>
@@ -7,7 +8,7 @@
         )
     </h1>
     <div class="details">
-        Posted <span>@Model.Posted</span> by <span>@Model.Author</span>
+        Posted <span>@Formate.AsReadableDate(Model.Posted)</span> by <span>@Model.Author</span>
     </div>
     <div class="content">
         @Model.Body
