Enhancing a view component with logic and dynamic markup

--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Index.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Index.cshtml
@@ -12,6 +12,6 @@
 <div class="blog-posts">
     @foreach (var post in Model)
     {
-        @await Html.PartialAsync("post",post)
+        @await Html.PartialAsync("_Post", post)
     }
 </div>
