--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Layout.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-@addTagHelper *,EploreCalifornia
+@addTagHelper *,ExploreCailfornia
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -74,7 +74,7 @@
   </section>
     <aside id="secondaryContent">
         <div id="specials" class="callOut">
-            <vc:monthly-specials/>
+            <vc:monthly-specials />
         </div>
         <div id="trivia" class="callOut">
             <h1>Did You Know?</h1>
