--- a/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Post.cshtml
+++ b/Learning MVC/ExploreCailfornia/ExploreCailfornia/Views/Blog/Post.cshtml
@@ -1,17 +1,6 @@
-﻿@model IEnumerable<ExploreCailfornia.Models.Post>
+﻿@model ExploreCailfornia.Models.Post
 @{
     Layout = "_Layout";
 }
 
-<h1>Explorer's Blog</h1>
-
-<p>
-    Below are a few of the latest posts from some of our explorers.
-</p>
-
-<div class="blog-posts">
-    @foreach (var post in Model)
-    {
-        @await Html.PartialAsync("post",post)
-    }
-</div>
+@await Html.PartialAsync("_Post")
